--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://riley-okeefe.github.io/personal-portfolio/",
   "type": "module",
   "scripts": {
     "dev": "vite",
